# ChangeLog for app-text/gtkspell
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/gtkspell/ChangeLog,v 1.102 2013/04/02 13:56:10 tetromino Exp $

  02 Apr 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  gtkspell-3.0.0.ebuild, +files/gtkspell-3.0.2-GTK_SPELL_CFLAGS.patch:
  Fix "@GTK_SPELL_CFLAGS@: No such file or directory" build failure (bug
  #463674, thanks to Nick Novikov).

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for alpha, wrt bug #458984

  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for ia64, wrt bug #458984

  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for arm, wrt bug #458984

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for ppc64, wrt bug #458984

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for ppc, wrt bug #458984

  26 Mar 2013; Jeroen Roovers <jer@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for HPPA (bug #458984).

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gtkspell-3.0.0.ebuild:
  Stable for amd64, wrt bug #458984

*gtkspell-3.0.0 (06 Dec 2012)

  06 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gtkspell-2.0.16.ebuild, -gtkspell-3.0.0_pre20110814-r1.ebuild,
  +gtkspell-3.0.0.ebuild:
  Version bump to 3.0.0 official release; remove prerelease snapshot (bug
  #444802, thanks to Jack). Remove useless doc USE flag.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> gtkspell-2.0.16.ebuild,
  gtkspell-3.0.0_pre20110814-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*gtkspell-3.0.0_pre20110814-r1 (27 Oct 2011)

  27 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org>