@@ -4,18 +4,16 @@ Hash: SHA256
 AUX gtkspell-3.0.2-GTK_SPELL_CFLAGS.patch 931 SHA256 7704b2c898fd7d627c6254f64e5b8775275463b92d1f15ad64801861ad608d1c SHA512 8c0e994465939f4db34388013e589e615cddadd70f4e4ac28bfd5c8f94524aea93374ac5c0040a9f729a445d5be7f606c5d81b7f758002d250e2c343baa0ce0a WHIRLPOOL fc9e9da87988100760e6dba6efc22954d4a18956b03fda9c078bc194572afb71835081676a4e2dadcb997e9e2d50e92fbdd2c13759cb93d18ce7ed9b76188fef
 DIST gtkspell-2.0.16.tar.gz 351277 SHA256 8fc7dc560167b2cb7193e76aca625a152dc19b0ebf49816b78539cbb90d80d02 SHA512 7d3afb327c2e15608194e6ee6110107a0ce082e483788d831d636b2e579472304137373c09a966d8e5c0cd2f830bf2e0ee477c9b5fca7da6ee27fd1498915b9d WHIRLPOOL 58dc258297412b99185f8d284fb4d2ab71ab834aa29e17a9dfb743e93271ae14d517fea2dc886112898f666104300df62b04082c307b3870de4a5d908bf2ae57
 DIST gtkspell3-3.0.0.tar.gz 396130 SHA256 e70161532c8ae131b9df3164d3a38562de20a136a2933f026b4e1633adbb7796 SHA512 46720427770a5ea912b3411b0292d0d9ebc75f389301b587d997246be01db4c952976be7a898a5ab5614d5d7f5c925509020d2d9487e9db2609a3fabb14ee1e9 WHIRLPOOL a76b6947df8dd110605088ec1eb6353fcb7ec358e9820a7f52a533fa92ba2564c306ab2e71125fe2061bb5922d5005f52fe7d06e0bba1a583b5550c514fbffbd
+DIST gtkspell3-3.0.2.tar.gz 410985 SHA256 15aa3912b6f1bf852cdd802be2cb1f3954ad605d4c7f3c818464e561e47b6879 SHA512 cc95e765e398e2aa95657062d9f2c27938c47432fc608e356729eb42607aff934ac077d9acf2698c11b54dec29081759d9703d7e7f2fcb05f4974c154088c1a8 WHIRLPOOL 1192648cc3cf1b0667e3d73cf185888f3a089b646a72949c97c4e40b14668f2ae8669aef2668dba4c9e6333d01d009791ab1c30a94e096bb9d744ef472f3c94e
 EBUILD gtkspell-2.0.16.ebuild 1067 SHA256 219b6d820f532a01f7990b7dcefdc976b0d7d156712f9a502002eea17a57cf72 SHA512 8f96e9ea45f2ec3feca156ea318e698e02e2a585a56c5582ff8af48d6e2a2598cc885e92144bf307bd2a63f429f93b21b0866ab542b26f394fb60657056624bf WHIRLPOOL 4f3fcb12041c497d2c23c869de4c65b6033e8be87fb96100a4e994946b474d4add735d55a45f2175c7e50859f4ba6716256693b85971eaa9ca3d58cdc599f2ba
 EBUILD gtkspell-3.0.0.ebuild 1198 SHA256 6847fd0ff606f50b5dce54eb88f230eed33d2de7cd6aa644195d2f91a4e0a0f8 SHA512 c469610fc07369d5f6ef8e9115871f14d7dfdb7f897bb7f69c2de0c614f335a99d23dfb17918d48ef61b33739dc6ac407e13a01f83766d6d60c22e0beeb87652 WHIRLPOOL 13b519036291fd03680ac40a20ec2b207556e5983a7a2f07350f76f2504f856804536d4eb125a5da503970466aa97be9132b881d65033ef11ecc8ca1f22124bf
-MISC ChangeLog 12796 SHA256 b8c6f9237171dc72fd6fa89db7ea5df5ad268fa499e5b830ecddd5bf8a2e821c SHA512 4b68c68cbd1ef8dd1c6912017ec40e72f15412e729ac11415536d84dec42c86147f1c66a386bd053be504cd6060006726580f732709a4d5346bc0433f539885d WHIRLPOOL 17354bf5f068f214e764174632364f648fee63dd6e716c59cfd7ad91893b969b4763cb7bf613f279fcebd3c8a39bcb341a152e97f42a3a3b1c13ac03190a31cf
-MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
+EBUILD gtkspell-3.0.2.ebuild 1322 SHA256 96915678991bdb6a233d29d0f7252c8e3fc3feab204904d33c286335a41e16c6 SHA512 159c5005a1375eb0b1369486311b07af420f38f255c4e87d700395f10423b885fe189a843183299868beb102134d8b666914f8066122ede751b8aa1002eb339d WHIRLPOOL b2ebeaf764373264059a29d7cfefedd00228ca29c2ba85aa21fd14aacbf003932d1647fe36643c4e0a451260b5e6caaf39615cccd7b06b80ecf91081430bcbe3
+MISC ChangeLog 12950 SHA256 5277926b72f36ca383ed9b83ca48ad762dd939a773811ece40ce36350252b77a SHA512 d01d0bf96e81f9f5caa3f55439294902cf64f814be1907976c8bd90675ca5650766202ae882db4244849068108c4ddee5f32fa73a8ef4daa4e8d60081ac17c8a WHIRLPOOL f59586e04afb35e1ed36b2f651b9d9b54c265ef5714c7d841d241f843c60cbfe844ab7e42e9b7fcbca4ed77175fc8748e44954559f3e9a7bc8cbbeee0b235aed
+MISC metadata.xml 242 SHA256 11f4b4bb23bb0e880a44b0f3efb5b4b0eeebaccd23956c72cd0cd9d386739c48 SHA512 686291088cb59735ff7df03fc5f11e43110039e74b8b24a9a8a517ed0f490f5694b873177e1ee808c4576ca26027add8324c6ee4e57b6b44d680a2522ec40b5f WHIRLPOOL f7bdc3a5208e0173deca7b15b26b967b61c3cb33e01b8f16fb87e32870e6c4deae514ac6af3fc91c300f960f2113e663eea02a9c599935072aad91459caf5277
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRWuN7AAoJEJ0WA1zPCt1huWEIAI/out7cAaQSqFOiJdFaCw+0
-7hoyvbiJyEE7DAkfd7x864dz3a8w9yoHeO+iF9jkfG2S/+f8R4AEG6HY+5To2C4Q
-McUXteipxonPtq3xwSfycRQ+asbTu4OXuMZx4UewD4EZ6nY5/4gak4WAIhQe8wOz
-rzF47ozySUUv/FhqYBPfVqDbEgUFZkKansk/uUR0+LPpqEOZkARJjRK3bzNJ5h9P
-GVqdSNcG6Lf73VmqQL8Xw5QdZoq6fMyPADqlYgYhvoNAP79ZmHWFnuvtNO90jBQz
-mkRF7sX6Ep0szsJpi4WLht/qN6AKNb8hZkEIYpouf0LwJP6kduc54NUoeTOVqTU=
-=jy/D
+iEYEAREIAAYFAlGs8s4ACgkQCaWpQKGI+9STdACdFGzSSO9UQ3IRgTjJLRrWN2fy
+hl4AoIYBuzZPG8B/w/P8K5HteXjAhqg3
+=F7JY
 -----END PGP SIGNATURE-----
