@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>gnome</herd>
+<use>
+	<flag name="vala">Enable bindings for <pkg>dev-lang/vala</pkg></flag>
+</use>
 </pkgmetadata>
