@@ -1,6 +1,12 @@
 # ChangeLog for app-text/gtkspell
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gtkspell/ChangeLog,v 1.102 2013/04/02 13:56:10 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gtkspell/ChangeLog,v 1.103 2013/06/03 19:47:25 pacho Exp $
+
+*gtkspell-3.0.2 (03 Jun 2013)
+
+  03 Jun 2013; Pacho Ramos <pacho@gentoo.org> +gtkspell-3.0.2.ebuild,
+  metadata.xml:
+  Version bump (#471642 by teidakankan)
 
   02 Apr 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
   gtkspell-3.0.0.ebuild, +files/gtkspell-3.0.2-GTK_SPELL_CFLAGS.patch:
